20-sg-rules/main.tf
# Bastion
resource "aws_security_group_rule" "bastion" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    #cidr_blocks = ["0.0.0.0/0"]
    cidr_blocks = [local.my_ip]
    security_group_id = local.bastion_sg_id
}

# MongoDB
resource "aws_security_group_rule" "mongodb_bastion" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    source_security_group_id = local.bastion_sg_id
    security_group_id = local.mongodb_sg_id
}

# Redis
resource "aws_security_group_rule" "redis_bastion" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    source_security_group_id = local.bastion_sg_id
    security_group_id = local.redis_sg_id
}

# MySQL
resource "aws_security_group_rule" "mysql_bastion" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    source_security_group_id = local.bastion_sg_id
    security_group_id = local.mysql_sg_id
}

#RabbitMQ
resource "aws_security_group_rule" "rabbitmq_bastion" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    source_security_group_id = local.bastion_sg_id
    security_group_id = local.rabbitmq_sg_id
}

# Ingress ALB
resource "aws_security_group_rule" "ingress_alb_public" {
    type = "ingress"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    security_group_id = local.ingress_alb_sg_id
}

# Openvpn
resource "aws_security_group_rule" "openvpn_public_443" {
    type = "ingress"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    security_group_id = local.openvpn_sg_id
}

resource "aws_security_group_rule" "openvpn_public_943" {
    type = "ingress"
    from_port = 943
    to_port = 943
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    security_group_id = local.openvpn_sg_id
}

resource "aws_security_group_rule" "eks_control_plane_bastion" {
    type = "ingress"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    source_security_group_id = local.bastion_sg_id
    security_group_id = local.eks_control_plane_sg_id
}

resource "aws_security_group_rule" "eks_node_bastion" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    source_security_group_id = local.bastion_sg_id
    security_group_id = local.eks_node_sg_id
}

resource "aws_security_group_rule" "eks_control_plane_eks_node" {
    type = "ingress"
    from_port = 0
    to_port = 0
    protocol = "-1" # all trafic
    source_security_group_id = local.eks_node_sg_id
    security_group_id = local.eks_control_plane_sg_id
}

resource "aws_security_group_rule" "eks_node_eks_control_plane" {
    type = "ingress"
    from_port = 0
    to_port = 0
    protocol = "-1" # all trafic
    source_security_group_id = local.eks_control_plane_sg_id
    security_group_id = local.eks_node_sg_id
    
}


resource "aws_security_group_rule" "eks_node_vpc_cidr" {
    type = "ingress"
    from_port = 0
    to_port = 0
    protocol = "-1" # all trafic
    cidr_blocks = ["10.128.0.0/16"]
    security_group_id = local.eks_node_sg_id
    
}
